# OpenRoleZoo

./: CMakeLists.txt
android/jni/: Android.mk
craft/: build.linux.x64.sh  build.win.vc14.x64.cmd  build.win.vc14.x64.debug.cmd  build.win.vc14.x86.cmd  build.win.vc14.x86.debug.cmd
include/orz/codec/: base64.h  json.h
include/orz/io/: csv.h  dir.h  i.h  walker.h
include/orz/io/jug/: binary.h  jug.h  piece.h
include/orz/io/stream/: bufferedstream.h  filestream.h  filterstream.h  memorystream.h  modelfilestream.h  stream.h
include/orz/mem/: need.h  pot.h  vat.h
include/orz/net/: http.h
include/orz/ssl/: aes.h  rsa.h
include/orz/sync/: canyon.h  cartridge.h  shotgun.h
include/orz/tools/: cpp_resources.h  ctxmgr_lite.h  ctxmgr_lite_support.h  fps.h  progress_bar.h  resources.h  timer.h
include/orz/utils/: except.h  format.h  log.h  random.h
src/: CMakeLists.txt
